Setup table edit autosave, update styles.

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 </head>
 <body class="bg-gray-100 text-gray-800">
 
-  <div id="app" class="max-w-7xl mx-auto p-4">
+  <div id="app" class="max-w-7xl mx-auto p-0">
     <!-- Vue app will be mounted here -->
   </div>
 
@@ -208,7 +208,7 @@
       emits: ['import', 'about'],
       template: `
         <div class="relative">
-          <nav class="bg-white border-b border-gray-200 rounded-md">
+          <nav class="bg-white border-b border-gray-200">
             <div class="max-w-7xl mx-auto px-2 py-1 flex items-center justify-between">
               <!-- Breadcrumbs -->
               <div class="flex items-center space-x-2">
@@ -307,7 +307,7 @@
             </div>
 
             <!-- Create New Project Section -->
-            <div class="bg-white p-4 rounded-lg shadow">
+            <div class="bg-white p-2">
               <h2 class="text-xl font-semibold mb-2">Create New Project</h2>
               <form @submit.prevent="addProject" class="flex flex-col sm:flex-row gap-2">
                 <input v-model="newProjectName" type="text" placeholder="Enter project name" class="input-field flex-grow" required>
@@ -444,7 +444,7 @@
       template: `
         <div>
           <NavBar :breadcrumbs="breadcrumbs" @import="importProject" @about="showAbout"/>
-          <div class="mt-4">
+          <div class="mt-2">
             <!-- Confirmation Modal display -->
             <ConfirmationModal v-if="confirmInfo.show" title="Delete Plot" message="Are you sure you want to delete this plot and all its associated trees? This action cannot be undone." @confirm="handleDeleteConfirm" @cancel="confirmInfo.show = false"/>
 
@@ -498,7 +498,7 @@
 
             <!-- Add New Plot Section -->
             <!-- TODO: Use the plot edit form -->
-            <div class="bg-white p-4 rounded-lg shadow mt-6">
+            <div class="bg-white p-2 mt-2">
               <h2 class="text-xl font-semibold mb-2">Add New Plot</h2>
               <form @submit.prevent="addPlot" class="flex flex-col sm:flex-row gap-2">
                 <input v-model.number="newPlotNumber" type="number" min="0" placeholder="Enter plot number" class="input-field flex-grow" required>
@@ -616,7 +616,7 @@
       ],
       emits: ['save', 'cancel', 'delete'],
       template: `
-        <div class="bg-lime-100 p-4 rounded-b-md -mt-2 relative">
+        <div class="bg-lime-100 p-2 relative">
           <!-- Menu container -->
           <div ref="menuElement" class="absolute top-2 right-2 z-10">
               <button @click.stop="toggleMenu" type="button" class="p-2 rounded-full hover:bg-lime-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-teal-500">
@@ -633,10 +633,10 @@
           </div>
 
           <!--Update tree-->
-          <form @submit.prevent="saveTree" class="space-y-4 mr-6">
-            <div class="grid grid-cols-5 md:grid-cols-7 lg:grid-cols-11 gap-4 items-end mt-2">
+          <form @submit.prevent="saveTree" class="space-y-2 mr-6">
+            <div class="grid grid-cols-3 md:grid-cols-7 lg:grid-cols-11 gap-2 items-end mt-0">
               <div>
-                <label class="block text-sm font-medium text-gray-700">Sample Code</label>
+                <label class="block text-sm font-medium text-gray-700">Plot Code</label>
                 <select v-model="localTree.design_code" class="input-field w-20" required>
                   <option v-for="code in design_code_list" :key="code" :value="code">{{ code }}</option>
                 </select>
@@ -684,7 +684,7 @@
                 <input v-model.number="localTree.total_height" type="number" step="0.1" placeholder="e.g., 120.5" class="input-field w-20">
               </div>
               <div>
-                <label class="block text-sm font-medium text-gray-700">Breast Ht. Age</label>
+                <label class="block text-sm font-medium text-gray-700">Age</label>
                 <input v-model.number="localTree.bh_age" type="number" step="1.0" placeholder="e.g., 42" class="input-field w-20">
               </div>
               <div>
@@ -786,10 +786,11 @@
       ],
       emits: ['create-tree', 'update-tree', 'delete-tree'],
       template: `
-        <div class="bg-white p-2 overflow-x-auto">
+        <div class="bg-white p-1 overflow-x-auto">
           <!--<h2 class="text-xl font-semibold mb-2">Tree Table</h2>-->
-          <table class="border-collapse table-auto min-w-full">
-            <thead class="text-center text-xs uppercase font-medium text-gray-500 bg-gray-50">
+          <table class="border-collapse table-auto min-w-full"
+          @keyup.esc="cancelEditing">
+            <thead class="text-center text-xs uppercase font-medium text-slate-500">
               <tr>
                   <th class="w-8">TR</th>
                   <th class="w-10">PF</th>
@@ -812,9 +813,10 @@
                   <th class="w-14">Actions</th>
               </tr>
             </thead>
-            <tbody class="bg-white text-left text-sm">
+            <tbody class="bg-white text-sm">
               <tr v-for="tree in localTrees" :key="tree.id" @click="startEditing(tree)"
-                class="hover:bg-lime-100 cursor-pointer py-0">
+                class="hover:bg-lime-100 cursor-pointer py-0"
+                :class="getRowClass(tree)">
                   <td class="compact-td text-center min-w-6">{{ tree.treeNumber }}</td>
                   <td class="compact-td text-center min-w-10">
                       <div v-if="!isEditing(tree.id)" class="">{{ tree.design_code }}</div>
@@ -896,11 +898,11 @@
                       <div v-if="!isEditing(tree.id)" class="table-field">{{ tree.distance }}</div>
                       <input v-else v-model.number="editingTree.distance" type="number" class="table-field">
                   </td>
-                  <td class="compact-td min-w-30">
+                  <td class="compact-td min-w-30 max-w-30">
                       <div v-if="!isEditing(tree.id)" class="table-text">{{ tree.notes }}</div>
                       <input v-else v-model="editingTree.notes" type="text" class="table-text">
                   </td>
-                  <td class="compact-td  font-medium">
+                  <td class="compact-td font-medium">
                       <div v-if="isEditing(tree.id)" class="flex items-center space-x-2">
                           <button @click.stop="saveChanges" class="text-teal-600 hover:text-teal-900"><i class="pi pi-check"></i></button>
                           <button @click.stop="cancelEditing" class="text-gray-600 hover:text-gray-900"><i class="pi pi-times"></i></button>
@@ -919,10 +921,39 @@
         const localTrees = ref([]);
         const editingTreeId = ref(null);
         const editingTree = reactive({});
+        const autoSave = ref(true);
 
         watch(() => props.trees, (newTrees) => {
             localTrees.value = JSON.parse(JSON.stringify(newTrees)).sort((a,b) => a.treeNumber - b.treeNumber);
         }, { deep: true, immediate: true });
+
+        // Watch the editingTree for changes
+        watch(editingTree, (newItem, oldItem) => {
+
+          if (!autoSave) { return }
+
+          // localTrees.value.forEach(item => {
+          //   if (item.id===newItem.id){
+          //     Object.assign(item, newItem)
+          //   }
+          // })
+
+          if (editingTree.id === 'new-tree-placeholder') {
+              emit('create-tree', { ...editingTree });
+          } else {
+              emit('update-tree', { ...editingTree });
+          }
+        })
+
+        const getRowClass = (tree) => {
+          if (editingTree && tree.id===editingTree.id) {
+            console.log('tr-active')
+            return 'tr-active'
+          } else {
+            return 'tr-inactive'
+          }
+
+        }
 
         const isEditing = (treeId) => editingTreeId.value === treeId;
 
@@ -974,6 +1005,7 @@
             localTrees,
             editingTreeId,
             editingTree,
+            getRowClass,
             isEditing,
             startEditing,
             cancelEditing,
@@ -992,33 +1024,33 @@
       template: `
         <div>
           <NavBar :breadcrumbs="breadcrumbs" @import="importProject" @about="showAbout"/>
-          <div v-if="plot.id" class="mt-4">
+          <div v-if="plot.id" class="mt-0">
             <!-- Confirmation Modal display -->
             <ConfirmationModal v-if="confirmInfo.show" title="Delete Tree" message="Are you sure you want to delete this tree? This action cannot be undone." @confirm="handleDeleteConfirm" @cancel="confirmInfo.show = false"/>
 
-            <!-- Tabs for Tree Map and Recorded Trees -->
-            <div class="mb-4 border-b border-gray-200">
-              <nav class="-mb-px flex space-x-8" aria-label="Tabs">
-                <button @click="activeTab = 'list'" :class="[activeTab === 'list' ? 'border-teal-500 text-teal-600' : 'border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300', 'whitespace-nowrap py-4 border-b-2 font-medium text-sm']">Recorded Trees ({{ trees.length }})</button>
-                <button @click="activeTab = 'table'" :class="[activeTab === 'table' ? 'border-teal-500 text-teal-600' : 'border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300', 'whitespace-nowrap py-4 border-b-2 font-medium text-sm']">Tree Table</button>
-                <button @click="activeTab = 'map'" :class="[activeTab === 'map' ? 'border-teal-500 text-teal-600' : 'border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300', 'whitespace-nowrap py-4 border-b-2 font-medium text-sm']">Tree Map</button>
+            <!-- Tabs for Tree Data Management -->
+            <div class="mb-4 border-b border-gray-200 px-2">
+              <nav class="-mb-px flex space-x-4" aria-label="Tabs">
+                <button @click="activeTab = 'list'" :class="[activeTab === 'list' ? 'border-teal-500 text-teal-600' : 'border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300', 'whitespace-nowrap py-2 border-b-2 font-medium text-sm']">Recorded Trees ({{ trees.length }})</button>
+                <button @click="activeTab = 'table'" :class="[activeTab === 'table' ? 'border-teal-500 text-teal-600' : 'border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300', 'whitespace-nowrap py-2 border-b-2 font-medium text-sm']">Tree Table</button>
+                <button @click="activeTab = 'map'" :class="[activeTab === 'map' ? 'border-teal-500 text-teal-600' : 'border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300', 'whitespace-nowrap py-2 border-b-2 font-medium text-sm']">Tree Map</button>
               </nav>
             </div>
 
             <!-- Tree Map Tab Content -->
-            <div v-show="activeTab === 'map'" class="bg-white p-4 rounded-lg shadow">
-              <h2 class="text-xl font-semibold mb-2">Visual Tree Entry</h2>
+            <div v-show="activeTab === 'map'" class="bg-white p-1">
+              <!--<h2 class="text-xl font-semibold mb-2">Visual Tree Entry</h2>-->
               <p class="text-sm text-gray-500 mb-2">Tap on the canvas below to add a tree visually. A new tree will be created and can be edited in the 'Recorded Trees' tab.</p>
-              <canvas ref="plotCanvas" class="plot-canvas w-full rounded-md" @click="handleCanvasClick"></canvas>
+              <canvas ref="plotCanvas" class="plot-canvas w-full" @click="handleCanvasClick"></canvas>
             </div>
 
             <!-- Recorded Trees Tab Content -->
-            <div v-if="activeTab === 'list'" class="bg-white p-4 rounded-lg shadow">
-              <h2 class="text-xl font-semibold mb-2 mt-4">Recorded Trees</h2>
-              <ul class="space-y-2 max-h-[60vh] overflow-y-auto">
+            <div v-if="activeTab === 'list'" class="bg-white p-1">
+              <!--<h2 class="text-xl font-semibold mb-2 mt-4">Recorded Trees</h2>-->
+              <ul class="space-y-1 max-h-[60vh] overflow-y-auto mb-1">
                 <li v-if="trees.length === 0" class="text-center text-gray-500 py-8">No trees recorded for this plot yet.</li>
-                <li v-for="tree in sortedTrees" :key="tree.id" class="bg-gray-50 rounded-lg shadow-sm">
-                  <div @click="selectTreeForEditing(tree)" class="p-3 cursor-pointer flex justify-between items-center" :class="editingTreeId === tree.id ? 'bg-lime-200 rounded-t-lg' : 'hover:bg-gray-100 rounded-lg'">
+                <li v-for="tree in sortedTrees" :key="tree.id" class="bg-gray-50 border border-gray-200">
+                  <div @click="selectTreeForEditing(tree)" class="p-1 cursor-pointer flex justify-between items-center" :class="editingTreeId === tree.id ? 'bg-lime-200' : 'hover:bg-gray-100'">
                     <div><p class="font-bold">{{ tree.treeNumber }}) {{ tree.design_code || '--'}} - {{ tree.species || 'N/A' }} - {{ tree.diameter || 'N/A' }} in - {{ tree.status || 'N/A' }}</p></div>
                     <div class="flex items-center space-x-2">
                       <i :class="editingTreeId === tree.id ? 'pi pi-chevron-up' : 'pi pi-chevron-down'" class="h-5 w-5 text-gray-500"></i>
@@ -1044,9 +1076,9 @@
 
               <!-- New Tree Form -->
               <!-- TODO: Use the TreeEditForm component for consistency -->
-              <div class="bg-lime-100 mb-4 p-4 border border-gray-200 rounded-md">
-                <h2 class="text-xl font-semibold mb-2">New Tree</h2>
-                <form @submit.prevent="addTreeByAzimuth" class="grid grid-cols-5 md:grid-cols-7 lg:grid-cols-11 gap-4 items-end mt-2 mr-6">
+              <div class="bg-lime-100 mb-1 p-2 border border-gray-200">
+                <h2 class="text-xl font-semibold mb-2">Add Tree</h2>
+                <form @submit.prevent="addTreeByAzimuth" class="grid grid-cols-3 md:grid-cols-7 lg:grid-cols-11 gap-2 items-end mt-2 mr-6">
                   <div>
                     <label class="block text-sm font-medium text-gray-700">Sample Code</label>
                     <select v-model="treeAddForm.design_code" class="input-field w-20" required>
@@ -1099,7 +1131,7 @@
                     <input v-model.number="treeAddForm.total_height" type="number" step="0.1" placeholder="e.g., 120.5" class="input-field w-20">
                   </div>
                   <div>
-                    <label class="block text-sm font-medium text-gray-700">Breast Ht. Age</label>
+                    <label class="block text-sm font-medium text-gray-700">Age</label>
                     <input v-model.number="treeAddForm.bh_age" type="number" step="1.0" placeholder="e.g., 42" class="input-field w-20">
                   </div>
                   <div>
@@ -1151,7 +1183,7 @@
             </div>
 
             <!-- Tree Table Tab Content -->
-            <div v-if="activeTab === 'table'" class="bg-white p-2">
+            <div v-if="activeTab === 'table'" class="bg-white">
                 <TreeTable
                   :trees="sortedTrees"
                   :design_code_list="design_code_list"
