--- a/index.html
+++ b/index.html
@@ -618,8 +618,8 @@
       template: `
         <div class="bg-lime-100 p-2 relative">
           <!-- Menu container -->
-          <div ref="menuElement" class="absolute top-2 right-2 z-10">
-              <button @click.stop="toggleMenu" type="button" class="p-2 rounded-full hover:bg-lime-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-teal-500">
+          <div ref="menuElement" class="absolute top-0 right-0 z-10">
+              <button @click.stop="toggleMenu" type="button" class="m-2 rounded-full hover:bg-lime-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-teal-500">
                   <i class="pi pi-ellipsis-v"></i>
               </button>
               <!-- Dropdown menu -->
@@ -790,7 +790,7 @@
           <!--<h2 class="text-xl font-semibold mb-2">Tree Table</h2>-->
           <table class="border-collapse table-auto min-w-full"
           @keyup.esc="cancelEditing">
-            <thead class="text-center text-xs uppercase font-medium text-slate-500">
+            <thead class="text-center text-sm sm:text-base uppercase font-medium text-slate-500">
               <tr>
                   <th class="w-8">TR</th>
                   <th class="w-10">PF</th>
@@ -813,7 +813,7 @@
                   <th class="w-14">Actions</th>
               </tr>
             </thead>
-            <tbody class="bg-white text-sm">
+            <tbody class="bg-white text-sm sm:text-base">
               <tr v-for="tree in localTrees" :key="tree.id" @click="startEditing(tree)"
                 class="hover:bg-lime-100 cursor-pointer py-0"
                 :class="getRowClass(tree)">
@@ -912,8 +912,26 @@
               </tr>
             </tbody>
           </table>
-          <div class="mt-4">
-            <button @click="addNewTree" class="btn btn-primary"><i class="pi pi-plus mr-2"></i> Add New Tree</button>
+        </div>
+        <div class="p-2 flex justify-between">
+          <button v-if="!inEditMode" @click="addNewTree" class="btn btn-primary">
+            <i class="pi pi-plus"></i>
+            <div v-if="screenWidth > 500" class="ml-2">Add Tree</div>
+          </button>
+          <button v-else @click="saveChanges" class="btn btn-primary">
+            <i class="pi pi-save"></i>
+            <div v-if="screenWidth > 500" class="ml-2">Save</div>
+          </button>
+
+          <div v-if="inEditMode">
+            <button @click="cancelEditing" class="btn mr-1 bg-gray-700">
+              <i class="pi pi-times"></i>
+              <div v-if="screenWidth > 500" class="ml-2">Cancel</div>
+            </button>
+            <button @click.stop="$emit('delete-tree', tree.id)" class="ml-1 btn btn-danger">
+              <i class="pi pi-trash"></i>
+              <div v-if="screenWidth > 500" class="ml-2">Delete</div>
+            </button>
           </div>
         </div>
       `,
@@ -922,6 +940,8 @@
         const editingTreeId = ref(null);
         const editingTree = reactive({});
         const autoSave = ref(true);
+
+        const inEditMode = computed(() => editingTreeId.value !== null);
 
         watch(() => props.trees, (newTrees) => {
             localTrees.value = JSON.parse(JSON.stringify(newTrees)).sort((a,b) => a.treeNumber - b.treeNumber);
@@ -1001,6 +1021,12 @@
             startEditing(newTreeTemplate);
         };
 
+        const screenWidth = ref(window.innerWidth);
+
+        window.addEventListener('resize', () => {
+          screenWidth.value = window.innerWidth;
+        });
+
         return {
             localTrees,
             editingTreeId,
@@ -1010,7 +1036,9 @@
             startEditing,
             cancelEditing,
             saveChanges,
-            addNewTree
+            addNewTree,
+            screenWidth,
+            inEditMode
         };
       }
     };
@@ -1029,11 +1057,11 @@
             <ConfirmationModal v-if="confirmInfo.show" title="Delete Tree" message="Are you sure you want to delete this tree? This action cannot be undone." @confirm="handleDeleteConfirm" @cancel="confirmInfo.show = false"/>
 
             <!-- Tabs for Tree Data Management -->
-            <div class="mb-4 border-b border-gray-200 px-2">
+            <div class="mb-0 border-b border-gray-200 px-2">
               <nav class="-mb-px flex space-x-4" aria-label="Tabs">
-                <button @click="activeTab = 'list'" :class="[activeTab === 'list' ? 'border-teal-500 text-teal-600' : 'border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300', 'whitespace-nowrap py-2 border-b-2 font-medium text-sm']">Recorded Trees ({{ trees.length }})</button>
-                <button @click="activeTab = 'table'" :class="[activeTab === 'table' ? 'border-teal-500 text-teal-600' : 'border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300', 'whitespace-nowrap py-2 border-b-2 font-medium text-sm']">Tree Table</button>
-                <button @click="activeTab = 'map'" :class="[activeTab === 'map' ? 'border-teal-500 text-teal-600' : 'border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300', 'whitespace-nowrap py-2 border-b-2 font-medium text-sm']">Tree Map</button>
+                <button @click="activeTab = 'list'" :class="[activeTab === 'list' ? 'border-teal-500 text-teal-600' : 'border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300', 'whitespace-nowrap py-2 border-b-2 font-medium text-sm']">List ({{ trees.length }})</button>
+                <button @click="activeTab = 'table'" :class="[activeTab === 'table' ? 'border-teal-500 text-teal-600' : 'border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300', 'whitespace-nowrap py-2 border-b-2 font-medium text-sm']">Table</button>
+                <button @click="activeTab = 'map'" :class="[activeTab === 'map' ? 'border-teal-500 text-teal-600' : 'border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300', 'whitespace-nowrap py-2 border-b-2 font-medium text-sm']">Map</button>
               </nav>
             </div>
 
