--- a/index.html
+++ b/index.html
@@ -278,25 +278,25 @@
       template: `
         <div>
           <NavBar :breadcrumbs="breadcrumbs" @import="importProject" @about="showAbout"/>
-          <div class="space-y-6 mt-4">
+          <div class="">
             <!-- Alert Modal display -->
             <AlertModal v-if="alertInfo.show" :title="alertInfo.title" :message="alertInfo.message" @close="alertInfo.show = false" />
 
             <!-- Existing Projects List -->
             <div>
-              <h2 class="text-xl font-semibold mb-2">Existing Projects</h2>
+              <!--<h2 class="text-xl font-semibold mb-2">Existing Projects</h2>-->
               <div v-if="projects.length === 0" class="text-center text-gray-500 py-8">No projects found. Create one to get started!</div>
               <div v-else class="grid grid-cols-1">
                 <div v-for="project in projects" :key="project.id" class="card mb-2 hover:bg-lime-50 transition-colors">
                   <div class="flex-grow">
                   <h3 class="text-lg font-bold text-teal-700">{{ project.name }}</h3>
-                  <p class="text-sm text-gray-500">ID: {{ project.id }}</p>
                   <p class="text-sm text-gray-500">Created: {{ new Date(project.createdAt).toLocaleString() }}</p>
                   <p class="text-sm text-gray-500">Plots: {{ project.plotCount || 0 }}</p>
+                  <p class="w-full text-right text-gray-500 italic text-xs">ID: {{ project.id }}</p>
                   </div>
                   <div class="mt-4 flex flex-wrap gap-2">
                   <router-link :to="'/project/' + project.id + '/plots'" class="btn btn-primary text-sm flex-grow">
-                    <i class="pi pi-eye h-4 w-4 mr-2"></i> View Plots
+                    <i class="pi pi-compass h-4 w-4 mr-2"></i> Plots
                   </router-link>
                   <button @click="exportProject(project.id)" class="btn btn-secondary text-sm flex-grow">
                     <i class="pi pi-download h-4 w-4 mr-2"></i> Export
@@ -444,18 +444,18 @@
       template: `
         <div>
           <NavBar :breadcrumbs="breadcrumbs" @import="importProject" @about="showAbout"/>
-          <div class="mt-2">
+          <div class="">
             <!-- Confirmation Modal display -->
             <ConfirmationModal v-if="confirmInfo.show" title="Delete Plot" message="Are you sure you want to delete this plot and all its associated trees? This action cannot be undone." @confirm="handleDeleteConfirm" @cancel="confirmInfo.show = false"/>
 
-            <!-- Survey Plots List -->
+            <!-- Plots List -->
             <div>
-              <h2 class="text-xl font-semibold mb-2">Survey Plots</h2>
+              <!--<h2 class="text-xl font-semibold mb-2">Survey Plots</h2>-->
               <div v-if="plots.length === 0" class="text-center text-gray-500 py-8">No plots found for this project. Add one to begin.</div>
               <div v-else class="grid grid-cols-1">
                 <div v-for="plot in plots" :key="plot.id" class="card mb-2 hover:bg-lime-50 transition-colors">
                   <h3 class="text-lg font-bold text-teal-700">Plot #{{ plot.plotNumber }}</h3>
-                  <div class="mt-2 grid grid-cols-2 sm:grid-cols-7 gap-2">
+                  <div class="mt-2 grid grid-cols-3 sm:grid-cols-7 gap-2">
                     <div>
                       <label class="block text-xs font-medium text-gray-500">Slope (%)</label>
                       <input v-model.number="plot.slope" min="0" @change="updatePlot(plot)" type="number" class="input-field bg-white text-sm p-1 w-20">
@@ -476,6 +476,12 @@
                       <label class="block text-xs font-medium text-gray-500">Longitude</label>
                       <input v-model.number="plot.planned_longitude" @change="updatePlot(plot)" type="number" class="input-field text-sm p-1 w-20">
                     </div>
+                    <div class="bg-red-500 flex">
+                      <router-link :to="'/gps/' + plot.id" class="bg-red-500 flex-grow">
+                        <i class="pi pi-globe h-4 w-4 mr-2"></i>
+                      </router-link>
+                    </div>
+
                     <div class="col-span-full">
                       <label class="block text-xs font-medium text-gray-500 p-1">Notes</label>
                       <textarea v-model="plot.notes" placeholder="Any additional notes..." class="input-field w-full" rows="1"></textarea>
